@@ -8,6 +8,7 @@
 package chrriis.dj.sweet.components;
 
 import java.io.File;
+import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -28,6 +29,9 @@ import org.eclipse.swt.widgets.Composite;
 
 import chrriis.common.Utils;
 import chrriis.common.WebServer;
+import chrriis.common.WebServer.HTTPRequest;
+import chrriis.common.WebServer.WebServerContent;
+import chrriis.common.WebServer.WebServerContentProvider;
 import chrriis.dj.sweet.NSOption;
 
 /**
@@ -51,6 +55,30 @@ public class JFlashPlayer extends Composite {
         return javascript;
       }
     };
+  }
+
+  static {
+    WebServer.getDefaultWebServer().addContentProvider(new WebServerContentProvider() {
+      public WebServerContent getWebServerContent(HTTPRequest httpRequest) {
+        // When the Flash player wants to access the host files, it asks for this one...
+        if("/crossdomain.xml".equals(httpRequest.getResourcePath())) {
+          return new WebServerContent() {
+            @Override
+            public InputStream getInputStream() {
+              return getInputStream("<?xml version=\"1.0\"?>" + Utils.LINE_SEPARATOR +
+                                    "<!DOCTYPE cross-domain-policy SYSTEM \"http://www.adobe.com/xml/dtds/cross-domain-policy.dtd\">" + Utils.LINE_SEPARATOR +
+                                    "<cross-domain-policy>" + Utils.LINE_SEPARATOR +
+                                    "  <site-control permitted-cross-domain-policies=\"all\"/>" + Utils.LINE_SEPARATOR +
+                                    "  <allow-access-from domain=\"*\" secure=\"false\"/>" + Utils.LINE_SEPARATOR +
+                                    "  <allow-http-request-headers-from domain=\"*\" headers=\"*\" secure=\"false\"/>" + Utils.LINE_SEPARATOR +
+                                    "</cross-domain-policy>"
+              );
+            }
+          };
+        }
+        return null;
+      }
+    });
   }
 
   private final ResourceBundle RESOURCES = ResourceBundle.getBundle(JFlashPlayer.class.getPackage().getName().replace('.', '/') + "/resource/FlashPlayer");
