@@ -10,6 +10,7 @@ Licence terms: LGPL (see licence.txt)
 - Commands can be sent from browser using sendNSCommand JS function.
 - Browser/Flash player commands and arguments do not have a size limit.
 - Browser/Flash player commands now take Object[] as params.
+- JFlashPlayer content can access host files.
 - VLC player now allows VLC options.
 - VLC API improved to work with 1.0.0.
 - VLC and Flash player do not have a loading message (was causing problems).
